web-infras/parser/tests/fixtures/babel/es2015/uncategorised/334/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,5)
1|[...eval] = arr
 |   ^
